<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/email_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_action_email"
            android:ems="10"
            android:fontFamily="@font/comfortaa"
            android:hint="@string/insert_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_log"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="16dp"
            android:drawableLeft="@drawable/ic_action_password"
            android:ems="10"
            android:fontFamily="@font/comfortaa"
            android:hint="@string/insert_pass"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/vkAuth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/comfortaa"
            android:text="@string/vk" />
    </LinearLayout>

</androidx.cardview.widget.CardView>